--- a/paper/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron.tex
+++ b/paper/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron.tex
@@ -7,7 +7,7 @@ Im Jahr 1943 entwickelten Warren McCulloch und Walter Pitts ein Modell das die F
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=\linewidth]{img/bioNeuron}
-	\mycaption{McCulloch-Pitts-Zellne - Genereller Aufbau}{mpNeuron}
+	\mycaption{McCulloch-Pitts-Zelle - Genereller Aufbau}{perceptronAdeline}
 	\label{fig:bioNeuron}
 \end{figure}
 
