--- a/paper/tex/seminar_main.tex
+++ b/paper/tex/seminar_main.tex
@@ -207,7 +207,7 @@ stringstyle=\color{Blue}
 \nocite{*} 
 
 \bibliographystyle{plain}
-\bibliography{verweise}
+\bibliography{../../verweise/verweise}
 
 \clearpage
 \section{Anhang}
