--- a/slides/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron.tex
+++ b/slides/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron.tex
@@ -87,4 +87,18 @@ f(g(x)) =\begin{cases}
 \item Funktionen müssen durch lineare Entscheidungsfunktion getrennt werden können
 \end{itemize}
 
+\begin{columns}
+\column{.4\textwidth}
+\begin{figure}
+	\includegraphics[width=\linewidth]{./geschichtliches/mcCullochPittsNeuron/img/perceptron_klassifizierung1}
+\end{figure}
+
+\column{.4\textwidth}
+\begin{figure}
+	\includegraphics[width=\linewidth]{./geschichtliches/mcCullochPittsNeuron/img/perceptron_klassifizierung2}
+\end{figure}
+
+
+\end{columns}
+
 \end{frame}
