--- a/paper/tex/geschichtliches/geschichtliches_part.tex
+++ b/paper/tex/geschichtliches/geschichtliches_part.tex
@@ -1,6 +1,6 @@
 \part{Geschichtliche Entwicklung}
 
-Die Entwicklung künstlicher Intelligenz ist momentan eines der wohl interessantesten Themen der heutigen technologischen Ära. Durch \emph{Machine Learning} ist es möglich viele Bereiche zu automatisieren die man dafür vorher nie in Betracht gezogen hatte. Dennoch hat es mich überrascht wie \glqq alt \grqq die Grundzügen dieser Technologie bereits sind. Die Anfänge finden sich schon Mitte der 50er Jahre als zum Beispiel diverse Experten auf diesem Gebiet das erste Mal zusammentrafen um im Zuge der \emph{Dartmouth Konferenz} über das Thema zu diskutieren. Aber auch bekannte Persönlichkeiten des Feldes, wie zum Beispiel \emph{Von Neumann} \footnote{Von Neumanns letztes Werk: zweiteiliges Manuskript über die damaligen Rechner und ihre Möglichkeiten das neuronale System zu emulieren.} erkannten früh die möglichen Zusammenhänge zwischen Mensch und Maschine.
+Die Entwicklung künstlicher Intelligenz ist momentan eines der wohl interessantesten Themen der heutigen technologischen Ära. Durch \emph{Machine Learning} ist es möglich viele Bereiche zu automatisieren die man dafür vorher nie in Betracht gezogen hatte. Dennoch hat es mich überrascht, wie \glqq alt \grqq die Grundzüge dieser Technologie bereits sind. Die Anfänge finden sich schon Mitte der 50er Jahre als zum Beispiel diverse Experten auf diesem Gebiet das erste Mal zusammentrafen um im Zuge der \emph{Dartmouth Konferenz} über das Thema zu diskutieren. Aber auch bekannte Persönlichkeiten des Feldes, wie zum Beispiel \emph{Von Neumann} \footnote{Von Neumanns letztes Werk: zweiteiliges Manuskript über die damaligen Rechner und ihre Möglichkeiten das neuronale System zu emulieren.} erkannten früh die möglichen Zusammenhänge zwischen Mensch und Maschine.
 
 Im folgenden Abschnitt werde ich etwas auf die geschichtlichen Aspekte von neuronalen Netzen eingehen. Hierbei werden insbesondere die generellen Aspekte der Funktionsweise von älteren Modellen bis hin zur aktuellen Entwicklung verfolgt. Ich werde versuchen die folgenden Leitfragen in diesem Abschnitt zu beantworten: 
 
