--- a/paper/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron.tex
+++ b/paper/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron.tex
@@ -2,7 +2,7 @@
 
 \subsection{Funktionsweise}
 
-Im Jahr 1943 entwickelten Warren McCulloch und Walter Pitts ein Modell das die Funktionalität eines biologischen Neurons imitieren sollte. In der folgenden Abbildung \ref{fig:bioNeuron} ist der grobe Aufbau eines biologischen Neurons zu sehen. 
+Im Jahr 1943 entwickelten Warren McCulloch und Walter Pitts ein Modell, das die Funktionalität eines biologischen Neurons imitieren sollte. In der folgenden Abbildung \ref{fig:bioNeuron} ist der grobe Aufbau eines biologischen Neurons zu sehen. 
 
 \begin{figure}[!htb]
 	\centering
@@ -11,10 +11,9 @@ Im Jahr 1943 entwickelten Warren McCulloch und Walter Pitts ein Modell das die F
 	\label{fig:bioNeuron}
 \end{figure}
 
-Die sogenannten \emph{Dendriten} (englisch \emph{dendrites}) nehmen Informationen auf. Sie besitzen Rezeptoren welche in der Lage sind Signale anderer Neuronen aufzunehmen. Diese Signale bewirken elektrische Veränderungen in dem Neuron welche vom Zellkörper (\emph{Soma}) interpretiert / verarbeitet werden. Dieser Zellkörper sammelt alle Informationen und speichert diese im sogenannten \emph{Axonhügel} (engl. Axonhillock) welcher die Ursprungsstelle des \emph{Axons} beziehungsweise der \emph{Neuriten} beschreibt. Wenn das gebündelte Signal stark genug sein sollte, wird es an den nächsten Teil des Neurons (dem \emph{Axon}) weitergeleitet. Ab diesem Zeitpunkt wird das Signal als \emph{Aktionspotential} bezeichnet und wird über die \emph{Axon} übertragen. Am Ende wird das Signal an diverse \emph{Axonterminale} weitergeleitet welche per Neurotransmitter mit den jeweils nächsten Dendriten verbunden sind. 
+Die sogenannten \emph{Dendriten} (englisch \emph{dendrites}) nehmen Informationen auf. Sie besitzen Rezeptoren, welche in der Lage sind Signale anderer Neuronen aufzunehmen. Diese Signale bewirken elektrische Veränderungen in dem Neuron, welche vom Zellkörper (\emph{Soma}) interpretiert / verarbeitet werden. Dieser Zellkörper sammelt alle Informationen und speichert diese im sogenannten \emph{Axonhügel} (engl. Axonhillock), welcher die Ursprungsstelle des \emph{Axons} beziehungsweise der \emph{Neuriten} beschreibt. Wenn das gebündelte Signal stark genug sein sollte, wird es an den nächsten Teil des Neurons (dem \emph{Axon}) weitergeleitet. Ab diesem Zeitpunkt wird das Signal als \emph{Aktionspotential} bezeichnet und wird über das \emph{Axon} übertragen. Am Ende wird das Signal an diverse \emph{Axonterminale} weitergeleitet, welche per Neurotransmitter mit den jeweils nächsten Dendriten verbunden sind. 
 
-Dieser biologische Aufbau dient als Grundlage für die Entwicklung des Modells von McCulloch und Pitts. Das Augenmerk ihres Modells liegt in erster Linie darauf Klassifizierungsprobleme zu lösen. Bei einem Klassifizierungsproblem wird \emph{das zu klassifizierende Objekt X ist dabei durch einen Merkmalvektor $\vec{x}$ aus dem betrachteten Merkmalraum M mit der Dimension n charakterisiert. Das Problem besteht nun darin zu entscheiden, ob das Objekt X in der betrachteten Klasse K liegt.} \cite{klproblem}. Der grobe Aufbau einer sogenannten \emph{McCulloch-Pitts-Zelle} ist in Abbildung \ref{fig:mpn_aufbau} zu sehen. Erwähnt sei ebenfalls, dass man mit diesem Modell lediglich binäre Klassifizierungen mittels einer linearen Entscheidungsfunktion / Aktivierungsfunktion durchführen kann (siehe \ref{fig:aufbau})
-
+Dieser biologische Aufbau dient als Grundlage für die Entwicklung des Modells von McCulloch und Pitts. Das Augenmerk ihres Modells liegt in erster Linie darauf Klassifizierungsprobleme zu lösen. Bei einem Klassifizierungsproblem wird \emph{das zu klassifizierende Objekt X dabei durch einen Merkmalvektor $\vec{x}$ aus dem betrachteten Merkmalraum M mit der Dimension n charakterisiert. Das Problem besteht nun darin zu entscheiden, ob das Objekt X in der betrachteten Klasse K liegt.} \cite{klproblem}. Der grobe Aufbau einer sogenannten \emph{McCulloch-Pitts-Zelle} ist in Abbildung \ref{fig:mpn_aufbau} zu sehen. Erwähnt sei ebenfalls, dass man mit diesem Modell lediglich binäre Klassifizierungen mittels einer linearen Entscheidungsfunktion / Aktivierungsfunktion durchführen kann (siehe \autoref{fig:aufbau})
 
 \begin{figure}%
   \centering
@@ -64,13 +63,13 @@ Die übliche Notation dieses Modells gibt vor, dass der jeweilige Schwellwert je
 \begin{minipage}{\textwidth}
 \begin{itemize}
 
-\item Dieses Modell  nur boolesche Eingabewerte, viele Modelle erfordern allerdings kontinuierliche Werte. Mit diesen wäre es zum Beispiel deutlich einfach ein Bild oder Ähnliches zu analysieren.
+\item Dieses Modell  erlaubt nur boolesche Eingabewerte, viele Modelle erfordern allerdings kontinuierliche Werte. Mit diesen wäre es zum Beispiel deutlich einfacher ein Bild oder Ähnliches zu analysieren.
 
-\item Die Schwelle (Theta) muss stets manuell bestimmt werden. Einen Trainingsalgorithmus wie man ihn von heutigen Ansätzen her kennt gibt es in diesem Modell nicht. 
+\item Die Schwelle (Theta) muss stets manuell bestimmt werden. Einen Trainingsalgorithmus, wie man ihn von heutigen Ansätzen her kennt, gibt es in diesem Modell nicht. 
 
-\item Es gibt keinerlei Priorisierungsmöglichkeit zwischen den einzelnen Eingabewerten. Jeder hat einen gleichgroßen Einfluss auf das Ergebnis, so etwas wie ein Auschlußkriterium gibt es hierbei also nicht. 
+\item Es gibt keinerlei Priorisierungsmöglichkeiten zwischen den einzelnen Eingabewerten. Jeder hat einen gleichgroßen Einfluss auf das Ergebnis, so etwas wie ein Ausschlusskriterium gibt es hierbei also nicht. 
 
-\item Es ist nicht möglich \emph{gedeckelt} Gatter wie zum Beispiel ein \emph{XOR} abzubilden. Bei einem Neuron mit zwei Eingabe-Werten müsste zum Beispiel ein Schwellwert von 1 \underline{genau} getroffen werden. Dieses Modell ist allerdings nur in der Lage zu entscheiden ob ein Schwellwert \emph{überschritten} wurde oder nicht. 
+\item Es ist nicht möglich \emph{gedeckelt} Gatter wie zum Beispiel ein \emph{XOR} abzubilden. Bei einem Neuron mit zwei Eingabe-Werten müsste zum Beispiel ein Schwellwert von 1 \underline{genau} getroffen werden. Dieses Modell ist allerdings nur in der Lage zu entscheiden ob ein Schwellwert \emph{überschritten} wurde oder nicht. Nichtlineare Entscheidungsfunktionen sind ebenfalls nicht möglich, die entstandenen Cluster müssen klar abtrennbar sein. 
 
 \end{itemize}
 \end{minipage}
